# haskel-introduction

./: README.md
AlgebraicDataTypes/: AlgebraicDataTypes.cabal  README.md
AlgebraicDataTypes/src/: LogAnalysis.hs
AlgebraicDataTypes/test/: Spec.hs
CodeGolf/: CodeGolf.cabal  README.md
CodeGolf/src/: CodeGolf.hs
CodeGolf/test/: Spec.hs
week1/: hanoi.hs  spec.hs
