name:                AlgebraicDataTypes
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/AlgebraicDataTypes#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LogAnalysis, Log
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable AlgebraicDataTypes
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , AlgebraicDataTypes
  default-language:    Haskell2010

test-suite AlgebraicDataTypes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , AlgebraicDataTypes
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/AlgebraicDataTypes
